--- a/FunKey/board/funkey/linux.config
+++ b/FunKey/board/funkey/linux.config
@@ -3,7 +3,7 @@ CONFIG_KERNEL_LZO=y
 CONFIG_DEFAULT_HOSTNAME="funkey"
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_LOG_BUF_SHIFT=16
+CONFIG_LOG_BUF_SHIFT=17
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=12
 CONFIG_CGROUPS=y
 CONFIG_EMBEDDED=y
@@ -88,8 +88,11 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_AXP20X=y
 # CONFIG_RC_CORE is not set
+CONFIG_REGULATOR_GPIO=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
+CONFIG_VIDEO_ST7701S=y
 CONFIG_FB_SSD1307=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
@@ -129,6 +132,12 @@ CONFIG_USB_G_ACM_MS=m
 CONFIG_MMC=y
 # CONFIG_PWRSEQ_EMMC is not set
 CONFIG_MMC_SUNXI=y
+CONFIG_NEW_LEDS=y
+CONFIG_LEDS_CLASS=y
+CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_SYSFS is not set
 # CONFIG_RTC_INTF_PROC is not set
@@ -140,14 +149,18 @@ CONFIG_FB_TFT=y
 CONFIG_FB_TFT_ST7789V=y
 CONFIG_FB_FLEX=y
 # CONFIG_SUN8I_A23_CCU is not set
-# CONFIG_SUN8I_A33_CCU is not set
+CONFIG_SUN8I_A33_CCU=y
 # CONFIG_SUN8I_H3_CCU is not set
-CONFIG_SUN8I_DE2_CCU=y
+# CONFIG_SUN8I_DE2_CCU is not set
 # CONFIG_IOMMU_SUPPORT is not set
+CONFIG_EXTCON=y
 CONFIG_IIO=y
 CONFIG_AXP20X_ADC=y
+CONFIG_PWM=y
 CONFIG_PWM_SUN4I=y
 CONFIG_PHY_SUN4I_USB=y
+CONFIG_PHY_SUN9I_USB=y
+CONFIG_NVMEM=y
 CONFIG_NVMEM_SUNXI_SID=y
 CONFIG_EXT4_FS=y
 # CONFIG_EXT4_USE_FOR_EXT2 is not set
@@ -161,6 +174,7 @@ CONFIG_SQUASHFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
+CONFIG_DEBUG_FS=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_RCU_TRACE is not set
@@ -175,3 +189,12 @@ CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_DEV_SUN4I_SS=y
 CONFIG_XZ_DEC=y
+CONFIG_PRINTK=y
+CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_SUNXI_UART0=y
+CONFIG_DEBUG_LL_INCLUDE="debug/8250.S"
+CONFIG_DEBUG_UART_8250=y
+CONFIG_DEBUG_UART_PHYS=0x01c28000
+CONFIG_DEBUG_UART_VIRT=0xf1c28000
+CONFIG_DEBUG_UART_8250_SHIFT=2
+CONFIG_DEBUG_UNCOMPRESS=y
