--- a/Recovery/board/funkey/uboot.config
+++ b/Recovery/board/funkey/uboot.config
@@ -1,22 +1,47 @@
+
 CONFIG_ARM=y
 CONFIG_ARCH_SUNXI=y
 CONFIG_SPL=y
 CONFIG_IDENT_STRING=" FunKey"
-CONFIG_MACH_SUN8I_V3S=y
-CONFIG_DRAM_CLK=360
+# CONFIG_MACH_SUN8I_V3S is not set
+CONFIG_MACH_SUN8I_A33=y
+CONFIG_DRAM_CLK=552
+CONFIG_DRAM_ZQ=15291
 CONFIG_I2C0_ENABLE=y
+CONFIG_USB0_VBUS_PIN="AXP0-VBUS-ENABLE"
+CONFIG_USB0_VBUS_DET="AXP0-VBUS-DETECT"
 # CONFIG_ARMV7_NONSEC is not set
-CONFIG_DEFAULT_DEVICE_TREE="sun8i-v3s-funkey"
+# CONFIG_DEFAULT_DEVICE_TREE="sun8i-v3s-funkey"
+CONFIG_DEFAULT_DEVICE_TREE="sun8i-a33-funboy-40a"
+CONFIG_CMD_DFU=y
+CONFIG_DFU_RAM=y
+CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_MUSB_GADGET=y
+CONFIG_USB_FUNCTION_MASS_STORAGE=y
 CONFIG_LOCALVERSION="-funkey"
 # CONFIG_DISTRO_DEFAULTS is not set
 # CONFIG_FIT is not set
-CONFIG_BOOTDELAY=0
+CONFIG_BOOTDELAY=1
 # CONFIG_PRE_CONSOLE_BUFFER is not set
 CONFIG_SYS_CONSOLE_INFO_QUIET=y
 CONFIG_SYS_STDIO_DEREGISTER=y
 # CONFIG_DISPLAY_CPUINFO is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
+CONFIG_MMC_SUNXI_SLOT_EXTRA=2
+CONFIG_USB0_ID_DET="PH8"
+CONFIG_VIDEO_LCD_MODE="x:480,y:800,depth:18,pclk_khz:25000,le:16,ri:8,up:20,lo:10,hs:8,vs:10,sync:3,vmode:0"
+CONFIG_VIDEO_LCD_DCLK_PHASE=0
+# CONFIG_VIDEO_LCD_BL_EN is no set="PH6"
+CONFIG_VIDEO_LCD_BL_PWM="PH0"
+CONFIG_VIDEO_ST7701S=y
+CONFIG_VIDEO_ST7701_DATA="PG6"
+CONFIG_VIDEO_ST7701_CS="PG10"
+CONFIG_VIDEO_ST7701_CLK="PG7"
+CONFIG_VIDEO_ST7701_RESET="PH1"
 CONFIG_HUSH_PARSER=y
+CONFIG_USB_MUSB_HOST=y
 CONFIG_CMD_BOOTZ=y
 CONFIG_CMD_PART=y
 CONFIG_CMD_EXT2=y
@@ -31,3 +56,7 @@ CONFIG_DEFAULT_ENV_FILE="$(BR2_EXTERNAL_RECOVERY_PATH)/board/funkey/rootfs-overl
 CONFIG_DM_I2C=y
 CONFIG_I2C_SET_DEFAULT_BUS_NUM=y
 CONFIG_SYS_I2C_MVTWSI=y
+# debug log zhanghb
+CONFIG_LOG=y
+CONFIG_LOGLEVEL=4
+
