--- a/Recovery/board/funkey/rootfs-overlay/etc/u-boot.env
+++ b/Recovery/board/funkey/rootfs-overlay/etc/u-boot.env
@@ -1,4 +1,4 @@
-args_mmc=setenv bootargs console=ttyS0,115200 loglevel=7 panic=5 rootwait fbcon=map:10 fbcon=font:VGA8x8 vt.global_cursor_default=0 root=/dev/mmcblk0p${bootpart} rootfstype=ext4 rootflags=commit=120,data=writeback,barrier=0,journal_async_commit ro
+args_mmc=setenv bootargs console=ttyS0,115200 console=tty0 fbcon=rotate:1 loglevel=7 panic=5 rootwait fbcon=map:10 fbcon=font:VGA8x8 vt.global_cursor_default=0 root=/dev/mmcblk0p${bootpart} rootfstype=ext4 rootflags=commit=120,data=writeback,barrier=0,journal_async_commit rw
 baudrate=115200
 bootcmd=run getbootpart; run check_keys; if test ${found} = 1; then setenv bootpart 1; fi; run args_mmc; run loadfdt; run loadimage; bootz ${loadaddr} - ${fdtaddr}
 bootdelay=1
